2006-03-15  Andrew Cagney  <cagney@redhat.com>

	* Proc.java (observableTaskAddedXXX, observableTaskRemovedXXX):
	Delete.

2006-03-14  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (assertRunUntilStop (int, String): New.
	* StressTaskObserver.java: Increase timeout to 20 seconds.

	* TestTaskObserver.java (testAttachDetachRapidlyCloningMainTask):
	Move to new file.
	* StressTaskObserver.java: New file.

	* TestLib.java (logger): Add protected field.
	* Task.java (logger): Change from private to protected final.
	* Host.java (logger): Ditto.
	* Proc.java (logger): Ditto.
	* LinuxHost.java (logger): Delete.
	* LinuxTask.java (logger): Delete.

	* TestLib.java: Update; frysk.sys.Poll simplified, member
	SignalSet deleted, Fds parameter removed.

2006-03-13  Andrew Cagney  <cagney@redhat.com>

	* TaskState.java: Add missing log messages.
	* ProcState.java: Ditto.

2006-03-12  Andrew Cagney  <cagney@redhat.com>

	* Host.java: Clean up log messages.
	* TaskState.java: Ditto.
	* ProcState.java: Ditto.
	* LinuxTask.java: Ditto.
	* LinuxHost.java: Ditto.
	* LinuxProc.java: Delete redundant log messages.
	* LinuxTask.java (toString): Delete.

2006-03-09  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Use Sig, instead of int for signals.
	(ackSignal, childAck, parentAck, addCloneSig)
	(delCloneSig, addForkSig, delForkSig, zombieForkSig, execSig)
	(execCloneSig): Move to global scope.
	* TestTaskObserverDetach.java: Update.
	* TestTaskObserver.java: Update.
	* TestTaskObserverBlocked.java: Update.
	* TestSyscallInterrupt.java: Update.

	* TestLib.java (tearDown): Update Poll.Oboserver.signal, now takes
	a Sig parameter.
	
	* TestTaskObserver.java (assertTaskGone): Change theSig parameter
	to a Sig, update calls.
	* TestLib.java (tearDown): Use Sig as an object.
	
	frysk.event.SignalEvent's constructor changed to take a Sig.
	* LinuxHost.java: Update.
	* TestLib.java: Update.

	frysk.sys.Sig.MEMBER renamed to frysk.sys.Sig._MEMBER.